...
                                            </imageView>
                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kQh-ai-MhE">
                                                <rect key="frame" x="231" y="814" width="76" height="68"/>
                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="ЩЕ РАЗ">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="OnceMoreButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kTU-QZ-XFO"/>
                                                </connections>
                                            </button>
...
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="68" id="C7h-wy-vqM"/>
                                                    <constraint firstAttribute="width" constant="76" id="LMm-4d-qhM"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="СТОП">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="ButtonStop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uNZ-g9-BW8"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6iq-PB-7ud">
                                                <rect key="frame" x="151" y="903" width="73" height="26"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Не чіпати!">
                                                    <color key="titleColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="ButtonDont2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="13J-sb-3cM"/>
                                                </connections>
                                            </button>
...
