...
        viewDidLoad()
        player.play()
    }
    @IBOutlet weak var ButtonDont: UIButton!
    
    @IBAction func ButtonDont2(_ sender: UIButton) {
        let alert = UIAlertController(title: "Тобі сказали не чіпати?", message: "То нащо ти то робиш?", preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: "Пойняв(", style: .default, handler: nil))
        alert.addAction(UIAlertAction(title: "Вибачте(", style: .cancel, handler: nil))
        
        self.present(alert, animated: true)
        
    }
    
    @IBAction func ButtonDohua(_ sender: UIButton) {
...
